8193262: JNI array not released in libsunmscapi convertToLittleEndian

Reviewed-by: ascarpino